clusters/aws-east/overlays/istio-system-configs/route-ewgateway.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ewgateway
  namespace: istio-system
spec:
  host: ewgateway.apps.east.sandbox1572.opentlc.com
  to:
    kind: Service
    name: istio-eastwestgateway
    weight: 100
  port:
    targetPort: tls
  tls:
    termination: passthrough
  wildcardPolicy: None
