clusters/aws-east/overlays/istio-system-configs/serviceentry-ewgateway-east.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: ewgateway-east
  namespace: istio-system
spec:
  hosts:
    - ewgateway.apps.east.sandbox2071.opentlc.com
  ports:
    - name: https
      number: 443
      protocol: HTTPS
  resolution: DNS
  location: MESH_INTERNAL
