clusters/aws-east/overlays/istio-system-configs/serviceentry-ewgateway-west.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: ewgateway-west
  namespace: istio-system
spec:
  hosts:
    - ewgateway.apps.west.sandbox2975.opentlc.com
  ports:
    - name: https
      number: 443
      protocol: HTTPS
  resolution: DNS
